--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,8 @@
         tools:targetApi="31" >
         <activity
             android:name=".LoginScreen"
-            android:exported="false"
-            android:theme="@style/Theme.ProActive_OPSC7311_POE" />
-        <activity
-            android:name=".SplashScreen"
-            android:exported="true" >
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
