--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -10,8 +10,15 @@
         android:label="ProActive"
         android:roundIcon="@mipmap/ic_proactive_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ProActive_OPSC7311_POE"
-        tools:targetApi="31" >
+        android:theme="@style/Base.Theme.ProActive_OPSC7311_POE"
+        tools:targetApi="31">
+        <activity
+            android:name=".HomeScreen"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterScreen"
+            android:exported="false"
+            android:theme="@style/Base.Theme.ProActive_OPSC7311_POE" />
         <activity
             android:name=".LoginScreen"
             android:exported="true"
