--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.proactive_opsc7311_poe">
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -12,12 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.ProActive_OPSC7311_POE"
         tools:targetApi="31">
-        <activity
-            android:name=".ProgressScreen"
-            android:exported="false" />
-        <activity
-            android:name=".AddScreen"
-            android:exported="false" />
+
         <activity
             android:name=".MainScreen"
             android:exported="false" />
@@ -35,6 +36,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:authorities="com.example.proactive_opsc7311_poe.fileProvider"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+
+
+        </provider>
+
     </application>
 
 </manifest>
