--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:name="android.hardware.camera"
         android:required="false" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -20,14 +21,14 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainScreen"
+            android:name=".controllers.MainScreen"
             android:exported="false" />
         <activity
-            android:name=".RegisterScreen"
+            android:name=".controllers.RegisterScreen"
             android:exported="false"
             android:theme="@style/Base.Theme.ProActive_OPSC7311_POE" />
         <activity
-            android:name=".LoginScreen"
+            android:name=".controllers.LoginScreen"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.SplashScreen">
             <intent-filter>
