--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,17 @@
         android:label="ProActive"
         android:roundIcon="@mipmap/ic_proactive_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Base.Theme.ProActive_OPSC7311_POE"
+        android:theme="@style/Theme.AppCompat.SplashScreen"
         tools:targetApi="31">
 
         <activity
             android:name=".controllers.MainScreen"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.SplashScreen"/>
         <activity
             android:name=".controllers.RegisterScreen"
             android:exported="false"
-            android:theme="@style/Base.Theme.ProActive_OPSC7311_POE" />
+            android:theme="@style/Theme.AppCompat.SplashScreen" />
         <activity
             android:name=".controllers.LoginScreen"
             android:exported="true"
